# UFPI-documents-chatbot

./: .env.sample  README.md  app.py  pyproject.toml
src/application/: __init__.py  rag_application.py
src/models/: embedding_model.py  language_model.py
src/readers/: __init__.py  document_reader.py
src/storage/: __init__.py  vector_store.py
